--- a/style.css
+++ b/style.css
@@ -471,6 +471,7 @@ section {
 .main-text {
     padding-top: 130px;
     margin-top: 200px;
+    /* display: flex; */
 }
 .main-text h2 {
     font-size: 60px;
@@ -482,6 +483,7 @@ section {
 }
 .portfolio-content {
     display: grid;
+    display: flex;
     grid-template-columns: repeat(auto-fit, minmax(359px, auto));
 }
 .row {
